# deferred_payment

./: .gitignore  .gitlab-ci.yml  README.rst  local.yml  manage.py  mkdocs.yml  production.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
compose/local/django/: Dockerfile
compose/local/docs/: Dockerfile  start
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
deferred_payment/: conftest.py
deferred_payment/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
deferred_payment/templates/: base.html
deferred_payment/users/: admin.py  apps.py  models.py  urls.py
deferred_payment/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
docs/: about.md  conf.py  howto.md  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.md  configuration.rst
requirements/: base.txt  production.txt
