[tool.poetry]
name = "deferred_payment"
version = "0.1.0"
description = ""
authors = ["Ángel Bonilla González <angelbonilla@cecotec.es>"]

[tool.poetry.dependencies]
Collectfast = "^2.2.0"
Django = "^3.2.9"
Pillow = "^8.4.0"
argon2-cffi = "^21.1.0"
celery = "^5.1.2"
django-allauth = "^0.45.0"
django-anymail = "^8.4"
django-celery-beat = "^2.2.1"
django-cors-headers = "^3.10.0"
django-crispy-forms = "^1.13.0"
django-environ = "^0.8.1"
django-model-utils = "^4.2.0"
django-redis = "^5.0.0"
django-storages = {extras = ["boto3"], version = "^1.12.3"}
djangorestframework = "^3.12.4"
flower = "^1.0.0"
gunicorn = "^20.1.0"
hiredis = "^2.0.0"
psycopg2 = "^2.9.1"
python = "^3.9"
python-slugify = "^5.0.2"
pytz = "^2021.3"
redis = "^3.5.3"
sentry-sdk = "^1.4.3"
structlog = "^21.2.0"

[tool.poetry.dev-dependencies]
Django = "^3.2.9"
Pillow = "^8.4.0"
Sphinx = "^4.2.0"
Werkzeug = "^2.0.2"
argon2-cffi = "^21.1.0"
black = "^21.10b0"
celery = "^5.1.2"
coverage = "^6.1.1"
django-allauth = "^0.45.0"
django-celery-beat = "^2.2.1"
django-cors-headers = "^3.10.0"
django-coverage-plugin = "^2.0.1"
django-crispy-forms = "^1.13.0"
django-debug-toolbar = "^3.2.2"
django-environ = "^0.8.1"
django-extensions = "^3.1.3"
django-model-utils = "^4.2.0"
django-redis = "^5.0.0"
django-stubs = "^1.9.0"
djangorestframework = "^3.12.4"
djangorestframework-stubs = "^1.4.0"
factory-boy = "^3.2.1"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flower = "^1.0.0"
hiredis = "^2.0.0"
ipdb = "^0.13.9"
mypy = "^0.910"
pre-commit = "^2.15.0"
psycopg2 = "^2.9.1"
pylint-celery = "^0.3"
pylint-django = "^2.4.4"
pytest = "^6.2.5"
pytest-django = "^4.4.0"
pytest-sugar = "^0.9.4"
python-slugify = "^5.0.2"
pytz = "^2021.3"
redis = "^3.5.3"
sphinx-autobuild = "^2021.3.14"
structlog = "^21.2.0"
watchgod = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
